--- a/src/styles/sections.css
+++ b/src/styles/sections.css
@@ -299,8 +299,9 @@
 .use-case-template_top-right-left-content { flex: 1; }
 .use-case-template_image-wrapper { aspect-ratio: 16/9; background-color: #e2e2e2; position: relative; }
 .use-case-template_label { font-family: var(--_fonts---fantasy); letter-spacing: .2em; text-transform: uppercase; font-size: .6rem; font-weight: 600; }
-.use-case-template_features-list { grid-column-gap: 1px; grid-row-gap: 1px; background-color: var(--brand--grey-lines); grid-template-columns: 1fr 1fr 1fr; margin-left: -2rem; display: flex; }
-.use-case-template_feature-item { background-color: var(--brand--white-grey); padding-left: 2rem; padding-right: 2rem; font-size: .875rem; }
+.use-case-template_features-list { grid-template-columns: 1fr 1fr 1fr; margin-left: -2rem; display: flex; }
+.use-case-template_feature-item { background-color: var(--brand--white-grey); padding-left: 2rem; padding-right: 2rem; font-size: .875rem; border-right: 1px solid var(--brand--grey-lines); }
+.use-case-template_feature-item:last-child { border-right: none; }
 .use-case-template_feature-item.is-last { flex: 1; }
 .use-case-template_mid-content { border-top: 1px solid #d3d3d3; }
 .use-case-template_detail-list { grid-column-gap: 1px; grid-row-gap: 1px; background-color: var(--brand--grey-lines); grid-template-columns: 1fr 1fr 1fr; margin-left: -2rem; margin-right: -2rem; display: grid; }
@@ -324,6 +325,8 @@
 }
 @media screen and (max-width: 479px) {
   .use-case-template_features-list { grid-template-columns: 1fr 1fr; display: grid; }
+  .use-case-template_feature-item:nth-child(2) { border-right: none; }
+  .use-case-template_feature-item:last-child { grid-column: 1 / -1; border-top: 1px solid var(--brand--grey-lines); }
 }
 
 /* ──────────────────────────────────────────────────────────────
